# MGC

./: .gitignore  CMakeLists.txt  Font.cpp  Keyboard.h  Locale.cpp  Locale.h  MagicalGirlCity.vcxproj  README.md  Texture.cpp  Texture.h  canvas.cpp  canvas.h  filesystem.cpp  filesystem.h  font.cpp  font.h  gl_utils.cpp  gl_utils.h  graphics.h  ini.h  ini_file.cpp  ini_file.h  ini_key.cpp  ini_key.h  ini_section.cpp  ini_section.h  keyboard.cpp  keyboard.h  log.cpp  log.h  main.cpp  mgc.cpp  mgc.h  mgc.ini  sprite.cpp  sprite.h  stddef.cpp  stddef.h  string_funcs.h  texture.cpp  (+1 more)
Resources/lang/: en-us.cfg
Resources/shaders/: core.frag  core.vert
include/: pendian.h
ini/: IniFile.cpp  IniFile.h  IniKey.cpp  IniParser.cpp  IniParser.h  IniSection.cpp  IniSection.h  ini.h  ini_file.cpp  ini_file.h  ini_key.cpp  ini_key.h  ini_record.cpp  ini_record.h  ini_section.cpp  ini_section.h
lib/x64/: SDL2.lib
lib/x86/: SDL2.lib
src/: Canvas.cpp  Canvas.h  InterpolateTask.cpp  InterpolateTask.h  Keyboard.cpp  Keyboard.h  Locale.cpp  Locale.h  Task.h  TaskExecutor.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  filesystem.cpp  filesystem.h  font.cpp  font.h  ini.h  log.cpp  log.h  main.cpp  mgc.cpp  mgc.h  render.cpp  render.h  timing.h  util.h
src/game/: Actor.cpp  Actor.h  Entity.cpp  Entity.h  player.cpp  player.h  stage.cpp  stage.h
src/ini/: IniFile.cpp  IniFile.h  IniKey.cpp  IniKey.h  IniParser.cpp  IniParser.h  IniSection.cpp  IniSection.h  ini.h
src/render/: Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  VertexBuffer.cpp  VertexBuffer.h  font.cpp  font.h  render.cpp  render.h  shader.cpp  shader.h
src/stddef/: stdafx.cpp  stdafx.h
src/ui/: Image.cpp  Image.h  UI.cpp  UI.h  UIElement.h  effects.h
